<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/irongrip_repeating"

        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/les_contrepetries"
                android:layout_marginBottom="10dp"
                android:fontFamily="Roboto-Light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/les_contrepeteries_desc"
                android:fontFamily="Roboto"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/les_contrepetrographes"
                android:fontFamily="Roboto-Light" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_margin="10dp">
            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#FFFFFF"
                android:padding="5dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/dom_img"
                    android:src="@drawable/mini_dom"

                    />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/dom_name"
                    android:id="@+id/dom_name"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="Roboto-Light" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/domDesc"
                    android:id="@+id/dom_desc"
                    android:fontFamily="Roboto"

                    />
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_margin="10dp">
            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#FFFFFF"
                android:padding="5dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/seb_img"
                    android:src="@drawable/mini_seb"

                    />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/stef_name"
                    android:id="@+id/seb_name"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="Roboto-Light" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/stef_desc"
                    android:id="@+id/stef_desc"
                    android:fontFamily="Roboto"

                    />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_margin="10dp">
            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#FFFFFF"
                android:padding="5dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/pol_img"
                    android:src="@drawable/mini_pol"

                    />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/pol_name"
                    android:id="@+id/textView"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="Roboto-Light" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/pol_desc"
                    android:id="@+id/textView2"
                    android:fontFamily="Roboto"

                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
